assets/css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    height: 100vh;
    background-color: #513751;
}

.wrapper {
    min-height: 95vh;
    min-width: 100%;
    background: #513751;
    display: flex;
    flex-direction: column;
    align-items: center;

}

.header {
    margin-top: 10%;
}
.header img {
    width: 200px;
    height: 200px;
}

.scoreboard img {
    width: 70%;
    border-radius: 20px;
    height: 50%;
    margin-left: 50px;
}


.scoreboard {
    margin: 50px;
    padding: 10px;
    display: flex;
    justify-content: space-between;
    width: 50%;
    height:auto;
    border: 1px solid #fff;
    border-radius: 20px;
    align-items: center;
    background: #fff;
}

.score, .decision {
    height: 60px;
    width: 65px;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-right: 5px;
}

.score p {
    font-size: 20px;
    font-weight: 400;
    letter-spacing: 2px;
}

/*Game simboles*/
.hands {
    width: 70%;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    justify-content: space-around;
    margin-top: 100px
}

.hands img {
    border-radius: 50%;
    width: 100px;
    height: 100px;
    margin-top: 4%;
}
.hands img:hover {
    transform: scale(1.2);
    transition: 100ms;
    cursor: pointer;
}

.hands p {
    background-color: white;
    text-align: center;
    font-size: 15px;
    border-radius: 10px;
    margin-top: 4%;
  }

  /*Contest page*/
.contest {
    width: 80%;
    display: none;
    margin-top: 50px;
    justify-content: center;
}

.contest img {
    border-radius: 50%;
    width: 100px;
    height: 100px;
}
    
.contest h2 {
    color: white;
    font-size: 18px;
    margin-bottom: 70px;
    text-align: center;
}

.contest .handImageContainer {
    display: flex;
    justify-content: center;
}

.userHand, .computerHand {
    height: 50%;
    width: 20%;
}

.referee {
    margin-top: 250px;
    width: 100px;
    text-align: center;
}

.decision h4 {
    text-align: center;
}

.newgame {
    background-color: white;
    padding: 15px 20px;
    border-radius: 10px;
    cursor: pointer;
}
.newgame:hover {
    background-color: #786478;
    transform: translate3d(0px, 2px, 0px);
}

.gamerules {
    margin: 50px;
    padding: 10px;
    display: flex;
    justify-content: space-between;
    width: 80%;
    height:auto;
    border: 1px solid #fff;
    border-radius: 20px;
    align-items: center;
    background: #fff;
    bottom: 0;
}

.gamerules h5 {
    padding-right: 5px;
}

footer p {
    bottom: 0;
    background-color: #683d68;
    text-align: center;
    font-size: 20px;
    height: 10%;

}

